Add borders to images

--- a/index.html
+++ b/index.html
@@ -3,25 +3,12 @@
   <head>
     <title>Dogs</title>
     <meta charset="utf-8" />
-    <style>
-     * {
-         box-sizing: border-box;
-     }
-     .doggos {
-         display: flex;
-         flex-wrap: wrap;
-     }
-     .doggos > img {
-         width: 400px;
-         height: 300px;
-         object-fit: cover;
-     }
-    </style>
+    <link rel="stylesheet" href="./css/style.css" ></head>
   </head>
   <body>
     <h1>Dogges</h1>
     <div class="doggos" ></div>
-    <button id="add-dog">Add dog</button>
+    <button id="add-random-dog">Add random dog</button>
     <script src="./script/doggos.js" ></script>
   </body>
 </html>
