Add breed selection: not working yet

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="./css/style.css" ></head>
   </head>
   <body>
-    <h1>Dogges</h1>
+    <h1>Doggoes</h1>
     <div class="doggos" ></div>
-    <button id="add-random-dog">Add random dog</button>
+    <span>Pick a doggo: </span><select id="breed-list"></select>
+    <button id="add-dog">Add doggo</button>
     <script src="./script/doggos.js" ></script>
   </body>
 </html>
