--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Doggoes</h1>
     <div class="doggos" ></div>
-    <span>Pick a doggo: </span><select id="breed-list"></select>
+    <span>Pick a doggo: </span><span id="breed-list"></span>
     <button id="add-dog">Add doggo</button>
     <script src="./script/doggos.js" ></script>
   </body>
