Add 'any' options. Fix image not showing.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Doggoes</h1>
-    <div class="doggos" ></div>
-    <span>Pick a doggo: </span><span id="breed-list"></span>
+    <div id="doggo-gallery" class="doggos"></div>
+    <span id="breed-list"></span>
     <button id="add-dog">Add doggo</button>
     <script src="./script/doggos.js" ></script>
   </body>
