--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="doggo-gallery" class="doggos"></div>
     <span id="breed-list"></span>
     <button id="add-dog">Add doggo</button>
-    <script src="./script/doggos.js" ></script>
+    <script type="module" src="./script/doggos.js" ></script>
   </body>
 </html>
